--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;500&display=swap');
+
 body {
+  background-color: #070707;
+  font-family: 'Eczar', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  /* display: flex; */
+  /* min-height: 100vh; */
+  /* justify-content: center; */
+  /* width: 100%; */
+  color: #F5F5F5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+h3,
+h4,
+span,
+a,
+i,
+p {
+  margin: 0;
 }
+
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+address {
+  font-style: normal;
+}
+
+/* pra centralizar o menu do componente menu */
+
+/* #root, body, html, #root > div {
+  height: 100%;
+} */
