--- a/src/App.module.css
+++ b/src/App.module.css
@@ -139,6 +139,7 @@
 
 @media (max-width: 850px) {
     .titulo {
+        margin-bottom: 40px;
         font-size: 2.375rem;
         line-height: 2.375rem;
     }
