--- a/src/App.module.css
+++ b/src/App.module.css
@@ -186,6 +186,7 @@
 @media (max-width: 850px) {
     .titulo {
         margin-bottom: 40px;
+        margin-top: 30px;
         font-size: 2.375rem;
         line-height: 2.375rem;
     }
